# Pergunte

./: .gitignore  app.py  base.xlsx  chatbot.db  pergunte-russel-firebase-adminsdk-fbsvc-93db4386e2.json  pergunte-russel-firebase-adminsdk-fbsvc-d14656c575.json  pergunte-russel.json  pyproject.toml  requirements.txt  secrets.toml
streamlit/: config.toml  secrets.toml
