[tool.poetry]
name = "pergunte-russel"
version = "0.1.0"
description = "Chatbot com Firebase e Streamlit"
authors = ["Seu Nome <seuemail@exemplo.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,!=3.9.7,<3.13"
streamlit = "^1.35.0"
firebase-admin = "^6.5.0"
fuzzywuzzy = "^0.18.0"
unidecode = "^1.3.8"
pandas = "^2.2.2"
python-Levenshtein = "^0.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
